Replaced MaxPermSize by MaxMetaspaceSize.